k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: estate-manager-service
  namespace: default
  labels:
    app: estate-manager
  annotations:
    # Alibaba Cloud SLB annotations
    service.beta.kubernetes.io/alibaba-cloud-loadbalancer-id: "lb-xxxxx"
    service.beta.kubernetes.io/alibaba-cloud-loadbalancer-force-override-listeners: "true"
    service.beta.kubernetes.io/alibaba-cloud-loadbalancer-address-type: "internet"
spec:
  type: LoadBalancer
  externalTrafficPolicy: Cluster
  selector:
    app: estate-manager
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
    - name: https
      protocol: TCP
      port: 443
      targetPort: 8080
  sessionAffinity: None
